_includes/manuals/1.5/5.2.5_cr_libvirt.md

* Currently only supports KVM hypervisors.
* VM consoles will be configured by default to listen on 0.0.0.0, change this via *libvirt_default_console_address* in *Administer > Settings > Provisioning*.
* libvirt's DNS and DHCP server (dnsmasq) can be disabled and replaced by BIND and ISC DHCPD (managed by Foreman) by creating a new virtual network and disabling DHCP support.

#### Connections

To connect to the hypervisor using SSH:

1. Configure SSH keys (ssh-keygen) for the 'foreman' user on the Foreman host to connect fully automatically to the remote hypervisor host.
1. Change to the 'foreman' user, test the connection and ensure the remote host has been trusted.
1. If connecting to the hypervisor as a non-root user, set up PolicyKit to permit access to libvirt.  Note that different versions of PolicyKit have different configuration formats.  [1](http://libvirt.org/auth.html#ACL_server_polkit), [2](http://wiki.libvirt.org/page/SSHPolicyKitSetup).
1. Add the compute resource with a URL following one of these examples:
   * `qemu+ssh://root@hypervisor.example.com/system` to use the remote 'root' account
   * `qemu+ssh://hypervisor.example.com/system` to use the remote 'foreman' account

The first two steps above can be done with something like:

    root# mkdir /usr/share/foreman/.ssh
    root# chmod 700 /usr/share/foreman/.ssh
    root# chown foreman:foreman /usr/share/foreman/.ssh
    root# su foreman -s /bin/bash
    foreman$ ssh-keygen
    foreman$ ssh-copy-id root@hostname.com
    foreman$ ssh root@hostname.com
    exit

To connect to the hypervisor over TCP without authentication or encryption (not recommended):

1. Set the following options in libvirtd.conf:
   * `listen_tls = 0`
   * `listen_tcp = 1`
   * `auth_tcp = "none"`
1. Enable libvirtd listening, e.g. set `LIBVIRTD_ARGS="--listen"` in /etc/sysconfig/libvirtd
1. Add the compute resource with a URL following this example:
   * `qemu+tcp://hypervisor.example.com:16509/system`

If you have difficulty connecting, test access using the virsh command under the 'foreman' account on the Foreman host first, e.g. `virsh -c qemu+ssh://hypervisor.example.com/system list`.

#### Image provisioning

Image based provisioning can be used by provisioning a VM with a backing image and then running a finish script over SSH, in the same manner as the EC2 provider.  The type of provisioning method can be selected under the "Operating system" tab when creating a new host.  To configure image/template-based provisioning:

* Images refer to backing disks (usually qcow2) - create a disk containing the OS image in the libvirt storage pool.
* Add the image by navigating to the compute resource and clicking *New Image*, enter the full path to the backing image in the *Image path* field.
* The template needs to have a username and password set up for Foreman to SSH in after provisioning and run the finish script.
* This requires some form of DHCP orchestration for SSH access to the newly created host to work.
* A finish template to perform any post-build actions (e.g. setting up Puppet) must also be associated to the host, usually by changing the OS default finish template.
* Ensure the image is not modified as long as hosts exists that are using it, or they will suffer data corruption.
